Various minor cleanups